--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -9,4 +9,11 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="SplashStyle" parent="GdxTheme">
+        
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        
+    </style>
+
+
 </resources>
